--- a/BlueBreak/Base.lproj/Main.storyboard
+++ b/BlueBreak/Base.lproj/Main.storyboard
@@ -1,10 +1,59 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4GP-Lk-5s7">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Start Game Screen-->
+        <scene sceneID="i3U-sY-bfd">
+            <objects>
+                <viewController id="4GP-Lk-5s7" customClass="StartGameScreen" customModule="BlueBreak" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MnM-vH-zcL"/>
+                        <viewControllerLayoutGuide type="bottom" id="Pi6-Hx-Hi8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zRd-YL-AQv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="center" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Vbq-Ro-ltf" userLabel="centralizaLogo">
+                                <rect key="frame" x="20" y="70" width="560" height="180"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo180" translatesAutoresizingMaskIntoConstraints="NO" id="sNt-eq-Zxp">
+                                        <rect key="frame" x="190" y="0.0" width="180" height="180"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="180" id="4jB-aj-abW"/>
+                                            <constraint firstAttribute="width" constant="180" id="70f-xZ-fiX"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="sNt-eq-Zxp" secondAttribute="bottom" constant="50" id="Vc1-um-SNW"/>
+                                    <constraint firstItem="sNt-eq-Zxp" firstAttribute="top" secondItem="Vbq-Ro-ltf" secondAttribute="top" constant="50" id="pQ8-ZI-dLA"/>
+                                    <constraint firstAttribute="height" constant="180" id="qGl-70-e94"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Vc1-um-SNW"/>
+                                        <exclude reference="pQ8-ZI-dLA"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.090196078431372548" green="0.29803921568627451" blue="0.63529411764705879" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Vbq-Ro-ltf" firstAttribute="top" secondItem="MnM-vH-zcL" secondAttribute="bottom" constant="50" id="UKl-Mb-ilx"/>
+                            <constraint firstItem="Vbq-Ro-ltf" firstAttribute="leading" secondItem="zRd-YL-AQv" secondAttribute="leadingMargin" id="oQB-d9-OI3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Vbq-Ro-ltf" secondAttribute="trailing" id="sCO-vU-rbA"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UXa-cG-OJI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-538" y="233"/>
+        </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
@@ -23,4 +72,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo180" width="180" height="180"/>
+    </resources>
 </document>
