--- a/BlueBreak/Base.lproj/Main.storyboard
+++ b/BlueBreak/Base.lproj/Main.storyboard
@@ -213,22 +213,51 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Num" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QrT-G4-YIo">
-                                            <rect key="frame" x="8" y="17" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nome do Dispositivo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDt-xq-4Xt">
-                                            <rect key="frame" x="58" y="17" width="452" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J4K-Z1-4Kn">
-                                            <rect key="frame" x="538" y="13" width="46" height="30"/>
-                                        </button>
+                                        <stackView opaque="NO" contentMode="center" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="5ER-AP-lfG">
+                                            <rect key="frame" x="8" y="8" width="584" height="39"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Num" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QrT-G4-YIo">
+                                                    <rect key="frame" x="0.0" y="5" width="46" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="2gD-MR-Prs"/>
+                                                        <constraint firstAttribute="width" constant="46" id="Uvr-o0-PxJ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome do Dispositivo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDt-xq-4Xt">
+                                                    <rect key="frame" x="46" y="5" width="492" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="aEI-Wp-UNe"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J4K-Z1-4Kn" userLabel="connectButton">
+                                                    <rect key="frame" x="538" y="5" width="46" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="46" id="5rN-IA-COy"/>
+                                                        <constraint firstAttribute="height" constant="30" id="Jxj-6S-ejB"/>
+                                                    </constraints>
+                                                    <state key="normal" image="connectButton"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="QrT-G4-YIo" firstAttribute="leading" secondItem="5ER-AP-lfG" secondAttribute="leading" id="4vv-us-gUA"/>
+                                                <constraint firstAttribute="trailing" secondItem="J4K-Z1-4Kn" secondAttribute="trailing" id="8vM-B0-4vf"/>
+                                                <constraint firstItem="RDt-xq-4Xt" firstAttribute="leading" secondItem="QrT-G4-YIo" secondAttribute="trailing" id="lG6-CY-pEc"/>
+                                                <constraint firstItem="J4K-Z1-4Kn" firstAttribute="leading" secondItem="RDt-xq-4Xt" secondAttribute="trailing" id="pPz-cs-vgZ"/>
+                                            </constraints>
+                                        </stackView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="5ER-AP-lfG" firstAttribute="top" secondItem="hGq-RR-ed0" secondAttribute="topMargin" id="A9Z-T0-rxT"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="5ER-AP-lfG" secondAttribute="bottom" id="QYJ-8i-LdJ"/>
+                                        <constraint firstItem="5ER-AP-lfG" firstAttribute="leading" secondItem="hGq-RR-ed0" secondAttribute="leadingMargin" id="bah-ml-ob0"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="5ER-AP-lfG" secondAttribute="trailing" id="umn-P7-ekJ"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -267,6 +296,7 @@
     </scenes>
     <resources>
         <image name="configButton" width="25" height="25"/>
+        <image name="connectButton" width="46" height="30"/>
         <image name="logoStartScreen180" width="180" height="180"/>
         <image name="logotipoStartScreen" width="200" height="75"/>
         <image name="playButton" width="150" height="150"/>
